--- a/CatchMe/Views/Tasks/DeleteTask.cshtml
+++ b/CatchMe/Views/Tasks/DeleteTask.cshtml
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.creator)
+            @Html.DisplayNameFor(model => model.initiator)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.creator)
+            @Html.DisplayFor(model => model.initiator)
         </dd>
 
         <dt>
