--- a/CatchMe/Views/Tasks/_notificationBody.cshtml
+++ b/CatchMe/Views/Tasks/_notificationBody.cshtml
@@ -1,33 +1,38 @@
 ﻿@model CatchMe.Models.task
 @using session = CatchMe.Helpers.UserSession
 
+@{
+    
+    var sp = CatchMe.Helpers.ConfigurationHelper.GetServerPath();
+}
+
 
 <div style="font-family: Calibri">
-    Dear User,<br />
-
+    Dear User,<br /><br />
+    
     You received a notification from Catch ME! from <b>@session.Current.Fullname</b>
 
-    <h2 style="color:#777">@Model.task_id @Model.title</h2>
+    <h2 style="color:#777">#@Model.task_id @Model.title</h2>
 
     <br />
-    Status: <b>@Model.StatusDesc</b>
+    Task Status: <b>@Model.StatusDesc</b>
 
-    <b>Last Comment:</b>
+    <br /><br />Most Recent Comment:
+    <hr />
     <p>
         <b>@Model.comments.LastOrDefault().title</b>
 
         @Html.Raw(Model.comments.LastOrDefault().description)
 
     </p>
+    <hr />
+    <p>
+        Read More:
+        <a href="@string.Concat("http://localhost:25894/Tasks/EditTask/",@Model.task_id)">@Model.title</a> or paste this (@string.Concat(sp,@Url.Content("~/Tasks/EditTask/"),@Model.task_id)) in your browser (preferably not IE)
+        </p>
+    
+    <br /><br />Regards,
+    <br />BugMe 
+    <br />(CatchMe Admin)
 
-    <p>Read More:</p>
-    <a href="@string.Concat("http://localhost:25894/Tasks/EditTask/",@Model.task_id)">@Model.title</a>
-    or paste this in your browser (preferably not IE)<br />
-    @string.Concat("http://localhost:25894/Tasks/EditTask/", @Model.task_id)
-
-    <pre>
-    Regards,
-    BugMe 
-    (CatchMe Admin)
-</pre>
 </div>
